Revert "Change method of determining height in attempt to fix issue on mobile devices"
This reverts commit a33a4e95432913e079abbbad3db341dd590b4fab.

--- a/_sass/theme/_base.scss
+++ b/_sass/theme/_base.scss
@@ -3,7 +3,8 @@
 }
 
 html, body {
-  height: calc(100%);
+  height: 100%;
+  min-height: 100%;
 }
 
 html {
@@ -13,7 +14,6 @@ html {
 body {
   display: flex;
   flex-direction: column;
-  height: calc(100%);
   font-family: $base-font-family;
   margin: 0;
 }
